Fix icon spacing

--- a/main.css
+++ b/main.css
@@ -1058,16 +1058,6 @@ nav a#logo:hover, nav a#logo:active, nav a#pull:hover, nav a#pull:active {
   font-variant: normal;
   text-transform: none;
  
-  /* fix buttons height, for twitter bootstrap */
-  line-height: 1em;
- 
-  /* Animation center compensation - margins should be symmetric */
-  /* remove if not needed */
-  margin-left: .2em;
- 
-  /* you can be more comfortable with increased icons size */
-  /* font-size: 120%; */
- 
   /* Font smoothing. That was taken from TWBS */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
